samples/errors/reserved-words.fls
_ + X + NOT +
    RESERVED + WORD + __ + A
